--- a/docs/Design/SystDesign/SystDes.tex
+++ b/docs/Design/SystDesign/SystDes.tex
@@ -255,11 +255,7 @@ The device is worn by a participant on the wrist for measuring activity and gene
 The software user interface will be used by the researcher for configuring the activity tracker. The interface will be on the host computer and will be able to store participant data, create new data and view records using encryption. The interface will also have authentication, and only the researcher will be able to log in. The following features are available on the software user interface:
 
 \begin{table}[H]
-	\begin{tabularx}{1.05\textwidth} { 
-		  | >{\centering\arraybackslash}X 
-		  | >{\centering\arraybackslash}X 
-		  | >{\centering\arraybackslash}X 
-		  | >{\centering\arraybackslash}X | }
+	\begin{tabular}{|p{5cm}|p{10cm}|}
 		 \hline
 		 \textbf{Options on UI} & \textbf{Description}\\
 		 \hline
@@ -273,14 +269,14 @@ The software user interface will be used by the researcher for configuring the a
 		\hline
 		Data view window & Data stored on SD card can be viewed and filtered. Data can also be plotted using the graph button. For example: Heart rate vs time.\\
 		\hline
-	\end{tabularx}
+	\end{tabular}
 \caption{\label{Software User Interface}Components of Software UI}  
 \end{table}
 
 Below is an example of the Software User Interface for the Main window.
 \begin{figure}[H]
 	\begin{center}
-		 \includegraphics[width=0.6\textwidth]{MainWindow}
+		 \includegraphics[width=0.4\textwidth]{MainWindow}
 		\caption{Main Window for Software UI}
 		\label{MainWindow} 
 	\end{center}
@@ -302,7 +298,7 @@ The touch bezels shown in figures 7, 8, and 9 will be used as a bezel to navigat
 
 \begin{figure}[H]
 	\begin{center}
-		 \includegraphics[width=0.5\textwidth]{DisplayCase}
+		 \includegraphics[width=0.3\textwidth]{DisplayCase}
 		\caption{TFT Display with Custom 3D Printed Case}
 		\label{DisplayCase} 
 	\end{center}
