--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -228,8 +228,6 @@ The following tools shall be used for development in software, embedded systems 
 \item 3D Printing: High time constraints, low availability, and print quality may be inconsistent. \\ Must take time constraints into consideration before integrating 3D Printing into the project.
 \end{itemize}
 
-\pagebreak
-
 \section{Coding Standard}
 \begin{enumerate}
 \item Python:
@@ -240,7 +238,7 @@ The following tools shall be used for development in software, embedded systems 
 \end{itemize}
 \item C: lint will be used as a linter when programming in C for development and debugging purposes.
 \end{enumerate}
-
+\newpage
 \section{Project Scheduling}
 
 \begin{enumerate}
